--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/index.js",
-    "start-dev": "nodemon backend/index.js"
+    "start-dev": "nodemon backend/index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
   },
   "author": "Karthikeyan Subramanian",
   "license": "ISC",
